--- a/README
+++ b/README
@@ -1,14 +1,11 @@
--*- markdown -*-
+# MuertosYHeridos #
 
-# Snip #
-
-Snip is a simple pastebin. It was written as the example for an [article](http://howtonode.org/node-redis-fun) on [How To Node](http://howtonode.org).
+MuertosYHeridos is a simple social game. 
 
 ## Prerequisites ##
 
 * [node](http://github.com/ry/node)
 * [Redis](http://code.google.com/p/redis)
-* [Pygments](http://pygments.org)
 
 It also uses the following, but they are included in the source:
 
@@ -20,7 +17,8 @@ It also uses the following, but they are included in the source:
 
 Start Redis on default port and localhost, do:
 
-    ./run snip.js
+~~~~~ bash
+    ./run theGame.js
+~~~~~
 
-Visit http://localhost:8000 and add snippets.
-
+Visit http://localhost:8000 and play!
